--- a/index.html
+++ b/index.html
@@ -108,10 +108,15 @@
         </div>
       </section>
       <main class="main">
-      <h1 class="quote">
-        "A Recipe has no Soul. You, as the Cook, must Bring Soul to the Recipe"
-        <br /><br />-Thomas Keller
-      </h1>
+        <!-- QUOTE CONTAINER -->
+        <div class="quote-container">
+          <div class="img"></div>
+          <h1 class="quote">
+            "A Recipe has no Soul. You, as the Cook, must Bring Soul to the Recipe"
+            <br /><br />-Thomas Keller
+          </h1>
+        </div>
+      
       <h1 class="heading">Recipes</h1>
       <section class="recipe-section">
         <div class="recipe-container">
@@ -147,7 +152,7 @@
         <div class="recipe-container demo">
           <div class="banner">COOK THIS NOW</div>
           <img
-            src="https://www.thespruceeats.com/thmb/ggN-xaB0x94egzfXtR_I7n1LdB4=/450x0/filters:no_upscale():max_bytes(150000):strip_icc()/kids-can-cook-pancakes-recipe-3542699-hero-01-419a333a494a4f10bd1052975f66b43d.jpg"
+            src="https://www.thespruceeats.com/thmb/lpewdgvhJg7UQJn4rEOC2wKIWuM=/960x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/homemade-pancakes-3058757-hero-01-0ddd32c330214299bd0300f3b1d7bae4.jpg"
             alt=""
             class="recipe-image"
           />
@@ -161,5 +166,9 @@
         </div>
       </section>
     </main>
+    <footer>
+      <div class="logo-footer"></div>
+      <div class="copyright"> 2021-2022 xyz | All Rights Reserved</div>
+    </footer>
   </body>
 </html>
