--- a/index.html
+++ b/index.html
@@ -31,66 +31,7 @@
   </head>
 
   <body style="overflow-x: hidden">
-    <!-- Navbar -->
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
-      <div class="container-fluid">
-        <button
-          class="navbar-toggler"
-          type="button"
-          data-bs-toggle="collapse"
-          data-bs-target="#navbarSupportedContent"
-          aria-controls="navbarSupportedContent"
-          aria-expanded="false"
-          aria-label="Toggle navigation"
-        >
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
-          <ul class="navbar-nav me-auto mb-2 mb-lg-0 gap-5">
-            <li class="nav-item">
-              <a class="nav-link active" aria-current="page" href="#">Home</a>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Link</a>
-            </li>
-            <li class="nav-item dropdown">
-              <a
-                class="nav-link dropdown-toggle"
-                href="#"
-                id="navbarDropdown"
-                role="button"
-                data-bs-toggle="dropdown"
-                aria-expanded="false"
-              >
-                Dropdown
-              </a>
-              <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
-                <li><a class="dropdown-item" href="#">Action</a></li>
-                <li><a class="dropdown-item" href="#">Another action</a></li>
-                <li><hr class="dropdown-divider" /></li>
-                <li>
-                  <a class="dropdown-item" href="#">Something else here</a>
-                </li>
-              </ul>
-            </li>
-            <li class="nav-item">
-              <a class="nav-link disabled">Disabled</a>
-            </li>
-          </ul>
-          <form class="d-flex">
-            <input
-              class="form-control me-2"
-              type="search"
-              placeholder="Search"
-              aria-label="Search"
-            />
-            <button class="btn btn-outline-success" type="submit">
-              Search
-            </button>
-          </form>
-        </div>
-      </div>
-    </nav>
+ 
 
     <!-- HERO SECTION -->
       <section class="hero-section">
@@ -130,7 +71,7 @@
             <h2>Mozarella Cheese Sticks</h2>
             <p>By Chanjot Nanda</p> 
             <p class="recipe-about">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed optio vitae velit voluptate voluptatem. Consequuntur ipsa nam doloremque minima nisi, porro explicabo ea ipsam maxime mollitia sunt minus dolore aliquid.</p>
-            <button><span>Click here</span><img src="data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgNzAgMTAwIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGQ9Ik03MCA1MC44NTlMMCAwbDIxLjU4IDUwLjg1OUwwIDEwMHoiIGZpbGw9IiNGOTNGMjMiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg==" alt="" class="arrow"></button>
+            <button><a href="./pages/RECIPES/moz.html"><span>Click here</span><img src="data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgNzAgMTAwIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGQ9Ik03MCA1MC44NTlMMCAwbDIxLjU4IDUwLjg1OUwwIDEwMHoiIGZpbGw9IiNGOTNGMjMiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg==" alt="" class="arrow"></a></button>
           </div>
           
         </div>
@@ -146,7 +87,7 @@
             <p>By Chanjot Nanda</p> 
             <p class="recipe-about">Lorem ipsum dolor, sit amet. Sed optio vitae velit voluptate voluptatem. Consequuntur ipsa nam doloremque minima nisi, porro explicabo ea ipsam maxime mollitia sunt minus dolore aliquid.</p>
 
-            <button><span>Click here</span><img src="data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgNzAgMTAwIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGQ9Ik03MCA1MC44NTlMMCAwbDIxLjU4IDUwLjg1OUwwIDEwMHoiIGZpbGw9IiNGOTNGMjMiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg==" alt="" class="arrow"></button>
+            <button><a href="./pages/RECIPES/chick.html"><span>Click here</span><img src="data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgNzAgMTAwIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGQ9Ik03MCA1MC44NTlMMCAwbDIxLjU4IDUwLjg1OUwwIDEwMHoiIGZpbGw9IiNGOTNGMjMiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg==" alt="" class="arrow"></a></button>
           </div>
         </div>
         <div class="recipe-container demo">
@@ -161,7 +102,7 @@
             <p>By Chanjot Nanda</p> 
             <p class="recipe-about">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Sed optio vitae velit voluptate voluptatem. Consequuntur ipsa nam doloremque minima nisi, porro explicabo ea ipsam maxime mollitia sunt minus dolore aliquid.</p>
 
-            <button><span>Click here</span><img src="data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgNzAgMTAwIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGQ9Ik03MCA1MC44NTlMMCAwbDIxLjU4IDUwLjg1OUwwIDEwMHoiIGZpbGw9IiNGOTNGMjMiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg==" alt="" class="arrow"></button>
+            <button><a href="./pages/RECIPES/panc.html"><span>Click here</span><img src="data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgNzAgMTAwIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGQ9Ik03MCA1MC44NTlMMCAwbDIxLjU4IDUwLjg1OUwwIDEwMHoiIGZpbGw9IiNGOTNGMjMiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg==" alt="" class="arrow"></a></button>
           </div>
         </div>
       </section>
