--- a/pages/RECIPES/moz.html
+++ b/pages/RECIPES/moz.html
@@ -93,60 +93,70 @@
     <!-- Content-->
 
     <main>
-      <div class="recipe-intro-container">
-        <h1>Mozzarella Cheese Sticks</h1>
-        <img
-          src="https://www.oetker.com.my/Recipe/Recipes/oetker.com.my/my-en/savory/image-thumb__65328__RecipeDetailsLightBox/mozzarella-cheese-sticks.jpg"
-          alt=""
-          class="recipe-img"
-        />
-      </div>
+      <div class="demo">
+        <div class="recipe-intro-container">
+          <h1>Mozzarella Cheese Sticks</h1>
+          <img
+            src="https://www.oetker.com.my/Recipe/Recipes/oetker.com.my/my-en/savory/image-thumb__65328__RecipeDetailsLightBox/mozzarella-cheese-sticks.jpg"
+            alt=""
+            class="recipe-img"
+          />
+        </div>
 
-      <div class="recipe-overview">
-        <h4>Recipe Overview</h4>
-        <ul>
-          <li><span>Prep: </span>15 mins</li>
-          <li><span>Cook: </span>15 mins</li>
-          <li><span>Total: </span>30 mins</li>
-          <li><span>Servings: </span>8</li>
-          <li><span>Yield: </span>8 servings</li>
-        </ul>
+        <div class="recipe-overview">
+          <h4>Recipe Overview</h4>
+          <ul>
+            <li><span>Prep: </span>15 mins</li>
+            <li><span>Cook: </span>15 mins</li>
+            <li><span>Total: </span>30 mins</li>
+            <li><span>Servings: </span>8</li>
+            <li><span>Yield: </span>8 servings</li>
+          </ul>
+        </div>
       </div>
 
       <div class="ingredients">
         <h4>Ingredients</h4>
         <ul>
-            <li> <input type="checkbox"> 2 eggs, beaten </li>
-            <li> <input type="checkbox"> 2 eggs, beaten </li>
-            <li> <input type="checkbox"> 2 eggs, beaten </li>
-            <li> <input type="checkbox"> 2 eggs, beaten </li>
-            <li> <input type="checkbox"> 2 eggs, beaten </li>
-            <li> <input type="checkbox"> 2 eggs, beaten </li>
+          <li><input type="checkbox" /> 2 eggs, beaten</li>
+          <li><input type="checkbox" /> 2 eggs, beaten</li>
+          <li><input type="checkbox" /> 2 eggs, beaten</li>
+          <li><input type="checkbox" /> 2 eggs, beaten</li>
+          <li><input type="checkbox" /> 2 eggs, beaten</li>
+          <li><input type="checkbox" /> 2 eggs, beaten</li>
         </ul>
       </div>
 
       <div class="steps">
         <h4>Directions</h4>
         <ul>
-            <i class="bi bi-bookmark-check-fill"></i> <span class="step-heading" role="heading">Step 1</span>
-            <p>In a small bowl, mix the eggs and water.</p>
-            <i class="bi bi-bookmark-check-fill"></i> <span class="step-heading" role="heading">Step 2</span>
-            <p>In a small bowl, mix the eggs and water.</p>
-            <i class="bi bi-bookmark-check-fill"></i> <span class="step-heading" role="heading">Step 3</span>
-            <p>In a small bowl, mix the eggs and water.</p>
-            <i class="bi bi-bookmark-check-fill"></i> <span class="step-heading" role="heading">Step 4</span>
-            <p>In a small bowl, mix the eggs and water.</p>
-            <i class="bi bi-bookmark-check-fill"></i> <span class="step-heading" role="heading">Step 5</span>
-            <p>In a small bowl, mix the eggs and water.</p>
-            <i class="bi bi-bookmark-check-fill"></i> <span class="step-heading" role="heading">Step 6</span>
-            <p>In a small bowl, mix the eggs and water.</p>
+          <i class="bi bi-bookmark-check-fill"></i>
+          <span class="step-heading" role="heading">Step 1</span>
+          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
+          <i class="bi bi-bookmark-check-fill"></i>
+          <span class="step-heading" role="heading">Step 2</span>
+          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
+          <i class="bi bi-bookmark-check-fill"></i>
+          <span class="step-heading" role="heading">Step 3</span>
+          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
+          <i class="bi bi-bookmark-check-fill"></i>
+          <span class="step-heading" role="heading">Step 4</span>
+          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
+          <i class="bi bi-bookmark-check-fill"></i>
+          <span class="step-heading" role="heading">Step 5</span>
+          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
+          <i class="bi bi-bookmark-check-fill"></i>
+          <span class="step-heading" role="heading">Step 6</span>
+          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
         </ul>
       </div>
-
-      <footer>
-          <div class="logo-footer"></div>
-            <p> &copy; 2021-2022 xyz <br>   All Rights Reserved</p>
-      </footer>
     </main>
+    <footer>
+      <div class="logo-footer"></div>
+      <p>
+        &copy; 2021-2022 xyz <br />
+        All Rights Reserved
+      </p>
+    </footer>
   </body>
 </html>
