--- a/pages/RECIPES/chick.html
+++ b/pages/RECIPES/chick.html
@@ -95,9 +95,9 @@
     <main>
       <div class="demo">
         <div class="recipe-intro-container">
-          <h1>Mozzarella Cheese Sticks</h1>
+          <h1>Tuscan Butter Roast Chicken</h1>
           <img
-            src="https://www.oetker.com.my/Recipe/Recipes/oetker.com.my/my-en/savory/image-thumb__65328__RecipeDetailsLightBox/mozzarella-cheese-sticks.jpg"
+            src="https://hips.hearstapps.com/vidthumb/images/delish-tuscan-butter-roast-chicken-still002-1549648316.jpg"
             alt=""
             class="recipe-img"
           />
@@ -107,10 +107,10 @@
           <h4>Recipe Overview</h4>
           <ul>
             <li><span>Prep: </span>15 mins</li>
-            <li><span>Cook: </span>15 mins</li>
-            <li><span>Total: </span>30 mins</li>
-            <li><span>Servings: </span>8</li>
-            <li><span>Yield: </span>8 servings</li>
+            <li><span>Cook: </span>1 hour 30 mins</li>
+            <li><span>Total: </span>1 hour 45 mins</li>
+            <li><span>Servings: </span>4</li>
+            <li><span>Yield: </span>4 servings</li>
           </ul>
         </div>
       </div>
@@ -118,12 +118,20 @@
       <div class="ingredients">
         <h4>Ingredients</h4>
         <ul>
-          <li><input type="checkbox" /> 2 eggs, beaten</li>
-          <li><input type="checkbox" /> 2 eggs, beaten</li>
-          <li><input type="checkbox" /> 2 eggs, beaten</li>
-          <li><input type="checkbox" /> 2 eggs, beaten</li>
-          <li><input type="checkbox" /> 2 eggs, beaten</li>
-          <li><input type="checkbox" /> 2 eggs, beaten</li>
+          <li><input type="checkbox" /> 1 (3-lb.) whole chicken</li>
+          <li><input type="checkbox" /> Kosher salt</li>
+          <li><input type="checkbox" /> Freshly ground black pepper</li>
+          <li><input type="checkbox" /> 1 lb. baby potatoes, halved </li>
+          <li><input type="checkbox" /> 1 large head broccoli, cut into florets</li>
+          <li><input type="checkbox" /> 1 large red onion, cut into wedges</li>
+          <li><input type="checkbox" /> 2 c. cherry tomatoes</li>
+          <li><input type="checkbox" /> 2 tbsp. extra-virgin olive oil</li>
+          <li><input type="checkbox" /> Pinch red pepper flakes</li>
+          <li><input type="checkbox" /> 4 tbsp. melted butter</li>
+          <li><input type="checkbox" /> 3 cloves garlic, minced</li>
+          <li><input type="checkbox" /> 1 tsp. Italian seasoning</li>
+          <li><input type="checkbox" /> Spinach, for serving</li>
+          <li><input type="checkbox" /> 1/4 c. thinly sliced basil</li>
         </ul>
       </div>
 
@@ -132,22 +140,20 @@
         <ul>
           <i class="bi bi-bookmark-check-fill"></i>
           <span class="step-heading" role="heading">Step 1</span>
-          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
+          <p class="recipe-info">Place a large skillet in oven and preheat to 450°. Pat chicken dry with paper towels and season generously with salt and pepper. Let sit at room temp while oven preheats and you prepare remaining ingredients. </p>
           <i class="bi bi-bookmark-check-fill"></i>
           <span class="step-heading" role="heading">Step 2</span>
-          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
+          <p class="recipe-info">In a large bowl toss together potatoes, broccoli, red onion, cherry tomatoes, and oil. Season with salt, pepper, and a pinch of red pepper flakes. </p>
           <i class="bi bi-bookmark-check-fill"></i>
           <span class="step-heading" role="heading">Step 3</span>
-          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
+          <p class="recipe-info">In a small bowl, combine butter, garlic, and Italian seasoning. Brush all over chicken.</p>
           <i class="bi bi-bookmark-check-fill"></i>
           <span class="step-heading" role="heading">Step 4</span>
-          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
+          <p class="recipe-info">Carefully remove skillet from oven and place chicken in center, then scatter vegetables around. Bake until skin is crispy and golden and internal temperature of thigh registers 165°, about 1 hour. Let rest 15 minutes.</p>
           <i class="bi bi-bookmark-check-fill"></i>
           <span class="step-heading" role="heading">Step 5</span>
-          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
-          <i class="bi bi-bookmark-check-fill"></i>
-          <span class="step-heading" role="heading">Step 6</span>
-          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
+          <p class="recipe-info">Serve chicken and vegetables over a bed of spinach. Spoon additional pan drippings over, if desired and top with basil. </p>
+
         </ul>
       </div>
     </main>
