--- a/pages/RECIPES/moz.html
+++ b/pages/RECIPES/moz.html
@@ -119,11 +119,13 @@
         <h4>Ingredients</h4>
         <ul>
           <li><input type="checkbox" /> 2 eggs, beaten</li>
-          <li><input type="checkbox" /> 2 eggs, beaten</li>
-          <li><input type="checkbox" /> 2 eggs, beaten</li>
-          <li><input type="checkbox" /> 2 eggs, beaten</li>
-          <li><input type="checkbox" /> 2 eggs, beaten</li>
-          <li><input type="checkbox" /> 2 eggs, beaten</li>
+          <li><input type="checkbox" /> ¼ cup water</li>
+          <li><input type="checkbox" /> 1 ½ cups Italian seasoned bread crumbs</li>
+          <li><input type="checkbox" /> ½ teaspoon garlic salt</li>
+          <li><input type="checkbox" /> ⅔ cup all-purpose flour</li>
+          <li><input type="checkbox" /> ⅓ cup cornstarch</li>
+          <li><input type="checkbox" /> ⅓ cup cornstarch</li>
+          <li><input type="checkbox" /> 1 (16 ounce) package mozzarella cheese sticks</li>
         </ul>
       </div>
 
@@ -135,19 +137,14 @@
           <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
           <i class="bi bi-bookmark-check-fill"></i>
           <span class="step-heading" role="heading">Step 2</span>
-          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
+          <p class="recipe-info">Mix the bread crumbs and garlic salt in a medium bowl. In a medium bowl, blend the flour and cornstarch.</p>
           <i class="bi bi-bookmark-check-fill"></i>
           <span class="step-heading" role="heading">Step 3</span>
-          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
+          <p class="recipe-info">In a large heavy saucepan, heat the oil to 365 degrees F (185 degrees C).</p>
           <i class="bi bi-bookmark-check-fill"></i>
           <span class="step-heading" role="heading">Step 4</span>
-          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
-          <i class="bi bi-bookmark-check-fill"></i>
-          <span class="step-heading" role="heading">Step 5</span>
-          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
-          <i class="bi bi-bookmark-check-fill"></i>
-          <span class="step-heading" role="heading">Step 6</span>
-          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
+          <p class="recipe-info">One at a time, coat each mozzarella stick in the flour mixture, then the egg mixture, then in the bread crumbs and finally into the oil. Fry until golden brown, about 30 seconds. Remove from heat and drain on paper towels.</p>
+
         </ul>
       </div>
     </main>
