--- a/pages/RECIPES/panc.html
+++ b/pages/RECIPES/panc.html
@@ -95,9 +95,9 @@
     <main>
       <div class="demo">
         <div class="recipe-intro-container">
-          <h1>Mozzarella Cheese Sticks</h1>
+          <h1>Home-Made Pancakes</h1>
           <img
-            src="https://www.oetker.com.my/Recipe/Recipes/oetker.com.my/my-en/savory/image-thumb__65328__RecipeDetailsLightBox/mozzarella-cheese-sticks.jpg"
+            src="https://www.thespruceeats.com/thmb/lpewdgvhJg7UQJn4rEOC2wKIWuM=/960x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/homemade-pancakes-3058757-hero-01-0ddd32c330214299bd0300f3b1d7bae4.jpg"
             alt=""
             class="recipe-img"
           />
@@ -106,11 +106,11 @@
         <div class="recipe-overview">
           <h4>Recipe Overview</h4>
           <ul>
-            <li><span>Prep: </span>15 mins</li>
-            <li><span>Cook: </span>15 mins</li>
-            <li><span>Total: </span>30 mins</li>
-            <li><span>Servings: </span>8</li>
-            <li><span>Yield: </span>8 servings</li>
+            <li><span>Prep: </span>20 mins</li>
+            <li><span>Cook: </span>30 mins</li>
+            <li><span>Total: </span>50 mins</li>
+            <li><span>Servings: </span>4</li>
+            <li><span>Yield: </span>4-5 servings</li>
           </ul>
         </div>
       </div>
@@ -118,12 +118,17 @@
       <div class="ingredients">
         <h4>Ingredients</h4>
         <ul>
+          <li><input type="checkbox" /> 1 cup whole wheat flour</li>
+          <li><input type="checkbox" /> ⅔ cup all-purpose flour</li>
+          <li><input type="checkbox" /> ⅓ cup wheat germ</li>
+          <li><input type="checkbox" /> 1 ½ teaspoons baking powder</li>
+          <li><input type="checkbox" /> ½ teaspoon baking soda</li>
+          <li><input type="checkbox" /> 2 tablespoons brown sugar</li>
+          <li><input type="checkbox" /> 1 teaspoon salt</li>
+          <li><input type="checkbox" /> 5 ⅓ tablespoons unsalted butter</li>
+          <li><input type="checkbox" /> 2 ½ cups buttermilk</li>
           <li><input type="checkbox" /> 2 eggs, beaten</li>
-          <li><input type="checkbox" /> 2 eggs, beaten</li>
-          <li><input type="checkbox" /> 2 eggs, beaten</li>
-          <li><input type="checkbox" /> 2 eggs, beaten</li>
-          <li><input type="checkbox" /> 2 eggs, beaten</li>
-          <li><input type="checkbox" /> 2 eggs, beaten</li>
+          <li><input type="checkbox" /> 3 tablespoons unsalted butter</li>
         </ul>
       </div>
 
@@ -132,23 +137,17 @@
         <ul>
           <i class="bi bi-bookmark-check-fill"></i>
           <span class="step-heading" role="heading">Step 1</span>
-          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
+          <p class="recipe-info">In a food processor or in a large bowl, combine the whole wheat flour, white flour, wheat germ or oats, baking powder, baking soda, brown sugar, and salt.</p>
           <i class="bi bi-bookmark-check-fill"></i>
           <span class="step-heading" role="heading">Step 2</span>
-          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
+          <p class="recipe-info">Cut the butter into small pieces with a knife, and add the butter to the flour-mixture. Mix until the mixture has a sand-like consistency.</p>
           <i class="bi bi-bookmark-check-fill"></i>
           <span class="step-heading" role="heading">Step 3</span>
-          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
+          <p class="recipe-info">Make a well in the center of the flour-butter mixture, and add the buttermilk and eggs. Stir until the liquids are fully incorporated..</p>
           <i class="bi bi-bookmark-check-fill"></i>
           <span class="step-heading" role="heading">Step 4</span>
-          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
-          <i class="bi bi-bookmark-check-fill"></i>
-          <span class="step-heading" role="heading">Step 5</span>
-          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
-          <i class="bi bi-bookmark-check-fill"></i>
-          <span class="step-heading" role="heading">Step 6</span>
-          <p class="recipe-info">In a small bowl, mix the eggs and water.</p>
-        </ul>
+          <p class="recipe-info">Heat a frying pan over medium heat and grease the surface with 1 tablespoon of butter or oil. Ladle the batter onto the surface to form 4 inch pancakes. Once bubbles form on the top of the pancakes, flip them over, and cook them on the other side for about 2 minutes.</p>
+         
       </div>
     </main>
     <footer>
