--- a/pages/RECIPES/moz.html
+++ b/pages/RECIPES/moz.html
@@ -149,11 +149,12 @@
       </div>
     </main>
     <footer>
-      <div class="logo-footer"></div>
-      <p>
-        &copy; 2021-2022 xyz <br />
-        All Rights Reserved
-      </p>
+      <div class="logo-footer"><img src="../../logo2.jpg" alt="" class="logo">
+        <p>
+            &copy; 2021-2022 xyz <br />
+            All Rights Reserved
+          </p></div>
+      
     </footer>
   </body>
 </html>
