--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
               sunt minus dolore aliquid.
             </p>
             <button>
-              <a href="./pages/RECIPES/moz.php"
+              <a href="./pages/RECIPES/moz.html"
                 ><span>Click here</span
                 ><img
                   src="data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgNzAgMTAwIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGQ9Ik03MCA1MC44NTlMMCAwbDIxLjU4IDUwLjg1OUwwIDEwMHoiIGZpbGw9IiNGOTNGMjMiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg=="
@@ -181,7 +181,7 @@
             </p>
 
             <button>
-              <a href="./pages/RECIPES/chick.php"
+              <a href="./pages/RECIPES/chick.html"
                 ><span>Click here</span
                 ><img
                   src="data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgNzAgMTAwIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGQ9Ik03MCA1MC44NTlMMCAwbDIxLjU4IDUwLjg1OUwwIDEwMHoiIGZpbGw9IiNGOTNGMjMiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg=="
@@ -209,7 +209,7 @@
             </p>
 
             <button>
-              <a href="./pages/RECIPES/panc.php"
+              <a href="./pages/RECIPES/panc.html"
                 ><span class="x">Click here</span
                 ><img
                   src="data:image/svg+xml;base64,PHN2ZyB2aWV3Qm94PSIwIDAgNzAgMTAwIiB4bWxucz0iaHR0cDovL3d3dy53My5vcmcvMjAwMC9zdmciPjxwYXRoIGQ9Ik03MCA1MC44NTlMMCAwbDIxLjU4IDUwLjg1OUwwIDEwMHoiIGZpbGw9IiNGOTNGMjMiIGZpbGwtcnVsZT0iZXZlbm9kZCIvPjwvc3ZnPg=="
