--- a/pages/RECIPES/chick.html
+++ b/pages/RECIPES/chick.html
@@ -158,11 +158,14 @@
       </div>
     </main>
     <footer>
-      <div class="logo-footer"></div>
-      <p>
-        &copy; 2021-2022 xyz <br />
-        All Rights Reserved
-      </p>
-    </footer>
+        <div class="logo-footer"><img src="../../logo2.jpg" alt="" class="logo">
+          <p>
+              &copy; 2021-2022 FoodHub <br />
+              All Rights Reserved
+            </p>
+    </div>
+        
+      </footer>
   </body>
 </html>
+
