--- a/pages/RECIPES/chick.html
+++ b/pages/RECIPES/chick.html
@@ -95,7 +95,7 @@
     <main>
       <div class="demo">
         <div class="recipe-intro-container">
-          <h1>Tuscan Butter Roast Chicken</h1>
+          <h1 class="heading">Tuscan Butter Roast Chicken</h1>
           <img
             src="https://hips.hearstapps.com/vidthumb/images/delish-tuscan-butter-roast-chicken-still002-1549648316.jpg"
             alt=""
@@ -158,14 +158,36 @@
       </div>
     </main>
     <footer>
-        <div class="logo-footer"><img src="../../logo2.jpg" alt="" class="logo">
-          <p>
-              &copy; 2021-2022 FoodHub <br />
-              All Rights Reserved
-            </p>
-    </div>
-        
-      </footer>
+      <div class="logo-footer">
+        <img src="../../logo2.jpg" alt="" class="logo" />
+
+        <div class="flex-container">
+          <div class="connect-container">
+            <h1 class="connect">Connect with us!</h1>
+            <div class="icons">
+                <i class="bi bi-facebook"></i>
+                <i class="bi bi-youtube"></i>
+                <i class="bi bi-linkedin"></i>
+                <i class="bi bi-twitter"></i>
+                <i class="bi bi-instagram"></i>
+            </div>
+            </div>
+            <div class="newsletter-container">
+                <h5 class="newsletter-heading">Subscribe to our newsletter!</h5>
+                <form action="moz.php" method="POST">
+                    <input type="email" class="email" name="email">
+                    <input type="submit" value="Subscribe" class="button">
+                </form>
+            </div>
+        </div>
+
+       
+      </div>
+      <p>
+        &copy; 2021-2022 FoodHub
+        All Rights Reserved
+      </p>
+    </footer>
   </body>
 </html>
 
