--- a/pages/RECIPES/panc.html
+++ b/pages/RECIPES/panc.html
@@ -95,7 +95,7 @@
     <main>
       <div class="demo">
         <div class="recipe-intro-container">
-          <h1>Home-Made Pancakes</h1>
+          <h1 class="heading">Home-Made Pancakes</h1>
           <img
             src="https://www.thespruceeats.com/thmb/lpewdgvhJg7UQJn4rEOC2wKIWuM=/960x0/filters:no_upscale():max_bytes(150000):strip_icc():format(webp)/homemade-pancakes-3058757-hero-01-0ddd32c330214299bd0300f3b1d7bae4.jpg"
             alt=""
@@ -151,14 +151,36 @@
       </div>
     </main>
     <footer>
-        <div class="logo-footer"><img src="../../logo2.jpg" alt="" class="logo">
-          <p>
-              &copy; 2021-2022 FoodHub <br />
-              All Rights Reserved
-            </p>
-    </div>
-        
-      </footer>
+      <div class="logo-footer">
+        <img src="../../logo2.jpg" alt="" class="logo" />
+
+        <div class="flex-container">
+          <div class="connect-container">
+            <h1 class="connect">Connect with us!</h1>
+            <div class="icons">
+                <i class="bi bi-facebook"></i>
+                <i class="bi bi-youtube"></i>
+                <i class="bi bi-linkedin"></i>
+                <i class="bi bi-twitter"></i>
+                <i class="bi bi-instagram"></i>
+            </div>
+            </div>
+            <div class="newsletter-container">
+                <h5 class="newsletter-heading">Subscribe to our newsletter!</h5>
+                <form action="moz.php" method="POST">
+                    <input type="email" class="email" name="email">
+                    <input type="submit" value="Subscribe" class="button">
+                </form>
+            </div>
+        </div>
+
+       
+      </div>
+      <p>
+        &copy; 2021-2022 FoodHub
+        All Rights Reserved
+      </p>
+    </footer>
   </body>
 </html>
 
