--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <a class="navbar-brand" href="#"><img src="./logo2.jpg" alt="" width="300" height="100"></a>
         <button
           class="navbar-toggler"
           type="button"
